kubernetes/temp-deployment/002_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: idea-gateway
  namespace: datamesh
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 5432
      name: postgres
      protocol: TCP
    hosts:
    - host01.idea.lst.tfo.upm.es
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - host01.idea.lst.tfo.upm.es
