kubernetes/temp-deployment/004_postgres-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: postgres-policy
  namespace: default
spec:
  selector:
    matchLabels:
      app: postgres
  action: DENY
  rules:
  - from:
    - source:
        notIpBlocks: ["138.4.10.229"]
